{Pls Read the Description..} Successfully Implemented HandGesture Code {WARNING: Needs hand_env folder}
WARNING: Needs hand_env folder to work this is a ython Environment specifically created for this project.
-----
INSTALL THIS hand_env (Will be provided by Multi) and run this command in vs terminal:
    .\hand_env\Scripts\activate
-----

--- a/Click A Wayy!!.csproj
+++ b/Click A Wayy!!.csproj
@@ -4,4 +4,8 @@
     <EnableDynamicLoading>true</EnableDynamicLoading>
     <RootNamespace>ClickAWayy</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MessagePack" Version="3.1.4" />
+  </ItemGroup>
 </Project>
